# Player

./: build.gradle
src/main/: AndroidManifest.xml  CMakeLists.txt
src/main/aidl/tv/danmaku/ijk/media/player/: IIjkMediaPlayer.aidl  IPlayCallback.aidl  IPlayerFactory.aidl
src/main/ffmpeg/: module.sh
src/main/ijkmedia/ijkj4a/: CMakeLists.txt
src/main/ijkmedia/ijkj4a/j4a/class/android/media/: MediaCodec.c  MediaCodec.h
src/main/ijkmedia/ijkplayer/: Android.mk  CMakeLists.txt  ff_ffpipenode.h  ff_ffplay.c  ijkplayer.c  ijkversion.h
src/main/ijkmedia/ijkplayer/android/: ijkplayer_android.c  ijkplayer_jni.c
src/main/ijkmedia/ijkplayer/android/pipeline/: ffpipeline_android.c  ffpipeline_android.h  ffpipenode_android_mediacodec_vdec.c  ffpipenode_android_mediacodec_vdec.h
src/main/ijkmedia/ijkplayer/ijkavformat/: ijkasync.c  ijkio.c  ijkioapplication.h  ijkiocache.c  ijkiomanager.c  ijkiourlhook.c  ijklivehook.c  ijksegment.c  ijkurlhook.c
src/main/ijkmedia/ijkplayer/ijkavutil/: ijkdict.c  ijkdict.h  md5.c  md5.h
src/main/ijkmedia/ijksdl/: CMakeLists.txt  ijksdl_egl.c
src/main/ijkmedia/ijksdl/android/: android_nativewindow.c  ijksdl_codec_android_mediacodec.c  ijksdl_codec_android_mediacodec.h  ijksdl_codec_android_mediacodec_java.c
src/main/ijkmedia/ijksoundtouch/: CMakeLists.txt
src/main/ijkmedia/ijkyuv/: CMakeLists.txt
src/main/ijkmedia/include/libavutil/: dict.h
src/main/ijkmedia/include/libffmpeg/: config.h
src/main/java/androidx/media3/exoplayer/hls/: HlsExtractorFactoryHelper.java  ShadowBundledHlsMediaChunkExtractor.java  ShadowHlsExtractorFactory.java
src/main/java/androidx/media3/extractor/ts/: ShadowTsExtractor.java
src/main/java/tv/danmaku/ijk/media/: CommonUtil.java
src/main/java/tv/danmaku/ijk/media/cache/: ByteArrayCache.java  ByteArraySource.java  Cache.java  CacheListener.java  Config.java  GetRequest.java  HttpProxyCache.java  HttpProxyCacheServer.java  HttpProxyCacheServerClients.java  HttpUrlSource.java  HttpUtil.java  IgnoreHostProxySelector.java  InterruptedProxyCacheException.java  Pinger.java  Preconditions.java  ProxyCache.java  ProxyCacheException.java  ProxyCacheUtils.java  Source.java  SourceInfo.java  StorageUtils.java
src/main/java/tv/danmaku/ijk/media/cache/file/: DiskUsage.java  FileCache.java  FileNameGenerator.java  Files.java  LruDiskUsage.java  Md5FileNameGenerator.java  TotalCountLruDiskUsage.java  TotalSizeLruDiskUsage.java  UnlimitedDiskUsage.java
src/main/java/tv/danmaku/ijk/media/cache/headers/: EmptyHeadersInjector.java  HeaderInjector.java
src/main/java/tv/danmaku/ijk/media/cache/sourcestorage/: DatabaseSourceInfoStorage.java  NoSourceInfoStorage.java  SourceInfoStorage.java  SourceInfoStorageFactory.java
src/main/java/tv/danmaku/ijk/media/player/: IPCTextureMediaPlayer.java
src/main/java/tv/danmaku/ijk/media/services/: IPCPlayerControl.java  IjkMediaPlayerService.java  MediaPlayerService.java  PlayerServiceManager.java
src/main/java/tv/danmaku/ijk/media/video/: DummySurface.java  EGLSurfaceTexture.java  GlUtil.java
src/main/java/tv/danmaku/ijk/media/widget/: AndroidMediaController.java  FileMediaDataSource.java  IMediaController.java  IPCVideoView.java  IRenderView.java  InfoHudViewHolder.java  MeasureHelper.java  MediaPlayerCompat.java  SurfaceRenderView.java  TableLayoutBinder.java  TextureRenderView.java  VideoControlHelper.java  VideoControlView.java  VideoView.java
src/main/java/tv/zhenl/media/: CommonUtil.java  DataSourceWrapper.java  IPCPlayerControl.java  VideoControlHelper.java  VideoPlayerView.java
src/main/res/drawable/: ic_fullscreen.xml  ic_fullscreen_exit.xml
src/main/res/layout/: exo_player_control_view.xml  video_brightness.xml  video_progress_dialog.xml  video_volume_dialog.xml  view_media_controller.xml
src/main/res/values/: strings.xml
